--- a/PearCoProject/PearCoProject.xcodeproj/xcshareddata/xcschemes/PearCoProject.xcscheme
+++ b/PearCoProject/PearCoProject.xcodeproj/xcshareddata/xcschemes/PearCoProject.xcscheme
@@ -39,7 +39,8 @@
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES">
+      allowLocationSimulation = "YES"
+      foundationModelsAvailabilityOverride = "appleIntelligenceNotEnabled">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
