--- a/PearCoProject/PearCoProject.xcodeproj/xcshareddata/xcschemes/PearCoProject.xcscheme
+++ b/PearCoProject/PearCoProject.xcodeproj/xcshareddata/xcschemes/PearCoProject.xcscheme
@@ -29,6 +29,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "1A26FCE62EAAABEB00D25A11"
+               BuildableName = "VoiceATesting.xctest"
+               BlueprintName = "VoiceATesting"
+               ReferencedContainer = "container:PearCoProject.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
