--- a/PearCoProject/PearCoProject.xcodeproj/xcshareddata/xcschemes/PearCoProject.xcscheme
+++ b/PearCoProject/PearCoProject.xcodeproj/xcshareddata/xcschemes/PearCoProject.xcscheme
@@ -41,6 +41,17 @@
                ReferencedContainer = "container:PearCoProject.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "FBE5C09B2EAB0245000CD484"
+               BuildableName = "HomeViewAndTermsAndConditionsTests.xctest"
+               BlueprintName = "HomeViewAndTermsAndConditionsTests"
+               ReferencedContainer = "container:PearCoProject.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
